@@ -1,5 +1,8 @@
 2006-12-14  Tatsuya BIZENN  <bizenn@arthub.net>
 
+	* Fix: src/kahua/server.scm
+	  Handle properly content of script/style element.
+
 	* 0.9.1 released.
 
 	* Fix: src/kahua/server.scm
